Basic tag filtering is now working from the advanced search control.
We now have two (nearly) redundant ways of doing tag filtering.  We should probably reword the advanced search so that it's prettier and then remove the extra info from the tag header of the song list...

--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -1,6 +1,8 @@
 ﻿@model SongDetails
 
 @Html.Partial("SetupSongScript")
+@Html.Partial("ItemTags")
+
 
 @using (Html.BeginForm((string)ViewBag.Action, "Song", null, FormMethod.Post, new { @class="form-horizontal"}))
 {
@@ -101,9 +103,7 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <h4>
-                @Html.Partial("ItemTags")
-            </h4>
+            <h4><span data-bind="template: {name:'tag-template',foreach:song.TagSummary.tagTypes}"></span></h4>
         </div>
     </div>
 
