--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model PagedList.IPagedList<Song>
+@using System.Runtime.Serialization.Json
 @using PagedList.Mvc;
 
 @* ReSharper disable once SuggestVarOrType_SimpleTypes *@
@@ -14,6 +15,8 @@
     var dances = (IList<SongCounts>)ViewBag.Dances;
 
 }
+
+@Html.Partial("ItemTags")
 
 @using (Html.BeginForm("Search", "Song", FormMethod.Get, new { id = "search" }))
 {
@@ -51,7 +54,6 @@
             checkS = "checked";
         }
     }
-
     <div class="row">
         <div class="col-xs-12">
             <div class="input-group" style="margin-top:10px">
@@ -80,7 +82,8 @@
                     </ul>
                 </div>
                 <input type="hidden" name="dances" id="dances" value="@filter.Dances" />
-                <input type="hidden" name="filter" id="filter" value="@filter.ToString()" />
+                <input type="hidden" name="filter" id="filter" value="@filter.ToString()"/>
+                <input type="hidden" name ="tags" id="tags" />
                 @Html.TextBox("SearchString", filter.SearchString, new { @class = "form-control search-text", placeholder = "Artist, Title, or Album" })
                 <span class="input-group-btn">
                     <button id="submit-search" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
@@ -119,7 +122,7 @@
                 <div class="input-group" style="margin-top: 3px">
                     Dance to
                     <div id="dance-boolean" class="btn-group">
-                        <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@(danceQuery.IsExclusive?"all":"any") <span class="caret"></span></button>
+                        <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@(danceQuery.IsExclusive ? "all" : "any") <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a id="db-all" href="#">All</a></li>
                             <li><a id="db-any" href="#">Any</a></li>
@@ -137,6 +140,10 @@
                             }
                         }
                     </select>
+                </div>
+                <div class="input-group" style="margin-top: 3px">
+                    Include tags <span data-bind="template: {name:'tag-template',foreach:includeTags.TagSummary.tagTypes}"></span>
+                    Exclude tags <span data-bind="template: {name:'tag-template',foreach:excludeTags.TagSummary.tagTypes}"></span>
                 </div>
             </div>
         </div>
@@ -201,6 +208,7 @@ else
     <div class="col-md-6"><h4>@description</h4></div>
 </div>
 
+@Html.Partial("_TagEditor")
 
 @section Scripts    
 {
@@ -221,12 +229,27 @@ else
         {
             <script>var danceOr = true</script>
         }
-        string pageScript = "~/Scripts/songindex.js" + Page.ScriptQualifier;
-        string msScript = "~/Scripts/musicservice.js" + Page.ScriptQualifier;
+
+        string filterString = null;
+        if (ViewData.ContainsKey("SongFilter"))
+        {
+            var stream = new MemoryStream();
+            var serializer = new DataContractJsonSerializer(typeof(SongFilter));
+            serializer.WriteObject(stream, ViewBag.SongFilter);
+            filterString = System.Text.Encoding.UTF8.GetString(stream.ToArray());
+        }
+        <script>window.songFilter = @(filterString == null ? null : Html.Raw(filterString));</script>
+
+        var tagChooserScript = "~/Scripts/tagchooser.js" + Page.ScriptQualifier;
+        var pageScript = "~/Scripts/songindex.js" + Page.ScriptQualifier;
+        var msScript = "~/Scripts/musicservice.js" + Page.ScriptQualifier;
     }
     @Scripts.Render("~/bundles/jqueryval")
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/knockout-3.3.0.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
     <script src="@Url.Content(msScript)" type="text/javascript"></script>
+    <script src="@Url.Content(tagChooserScript)" type="text/javascript"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 
     <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
