Fix two bugs in tempi page:
1) Remove "Performance" from both the Style and teh Type menus - since my current definition of a performance dance is one that doesn't have a definied meter and tempo, they don't belong here
2) Fix the firefox bug where the menu name was showing up as "undefined" after anything was selected.  This was because I was using the innerText property on the DOM node to get the text of the menu item which isn't support by firefox.  Instead, I am now grabbing the jQuery object and using its text() function to genericall retrieve the text.

--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -45,7 +45,8 @@
             <li><a id="filter-type-ALL" href="#">All Types</a></li>
             @foreach (var item in danceGroups)
             {
-                var id = "filter-type-" + item.Id;
+                if (item.CleanName == "performance") { continue;}
+                    var id = "filter-type-" + item.Id;
                 <li><a id="@id" href="#">@item.Name</a></li>
             }
         </ul>
