--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -34,14 +34,30 @@
     @Styles.Render(themeBundle)
     @RenderSection("styles",false)
     <script type="text/javascript">
-    var appInsights = window.appInsights || function (config) {
-        function s(config) { t[config] = function () { var i = arguments; t.queue.push(function () { t[config].apply(t, i) }) } } var t = { config: config }, r = document, f = window, e = "script", o = r.createElement(e), i, u; for (o.src = config.url || "//az416426.vo.msecnd.net/scripts/a/ai.0.js", r.getElementsByTagName(e)[0].parentNode.appendChild(o), t.cookie = r.cookie, t.queue = [], i = ["Event", "Exception", "Metric", "PageView", "Trace"]; i.length;) s("track" + i.pop()); return config.disableExceptionTracking || (i = "onerror", s("_" + i), u = f[i], f[i] = function (config, r, f, e, o) { var s = u && u(config, r, f, e, o); return s !== !0 && t["_" + i](config, r, f, e, o), s }), t
-    }({
-        instrumentationKey: "aada2f48-d93c-4778-a71f-7781952cc47b"
-    });
+        var appInsights = window.appInsights || function(config) {
+            function r(config) {
+                t[config] = function() {
+                    var i = arguments;
+                    t.queue.push(function() { t[config].apply(t, i) })
+                }
+            }
 
-    window.appInsights = appInsights;
-    appInsights.trackPageView();
+            var t = { config: config }, u = document, e = window, o = "script", s = u.createElement(o), i, f;
+            for (s.src = config.url || "//az416426.vo.msecnd.net/scripts/a/ai.0.js", u.getElementsByTagName(o)[0].parentNode.appendChild(s), t.cookie = u.cookie, t.queue = [], i = ["Event", "Exception", "Metric", "PageView", "Trace"]; i.length;)r("track" + i.pop());
+            return r("setAuthenticatedUserContext"), r("clearAuthenticatedUserContext"), config.disableExceptionTracking || (i = "onerror", r("_" + i), f = e[i], e[i] = function(config, r, u, e, o) {
+                var s = f && f(config, r, u, e, o);
+                return s !== !0 && t["_" + i](config, r, u, e, o), s
+            }), t
+        }({
+            instrumentationKey: "aada2f48-d93c-4778-a71f-7781952cc47b"
+        });
+
+        window.appInsights = appInsights;
+        appInsights.trackPageView();
+        @if (Request.IsAuthenticated)
+        {
+            @:appInsights.setAuthenticatedUserContext("@User.Identity.Name".replace(/[,;=| ]+/g, "_"));
+        }
     </script>
     <script>
     (function (i, s, o, g, r, a, m) {
