--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -32,15 +32,12 @@
         @ScriptHelper.Parameter(ViewData, "ShowBPM");
 
         @Scripts.Render("~/bundles/jqueryval")
+        @Scripts.Render("~/bundles/knockout")
+        @Scripts.Render("~/bundles/tools-script")
 
-        <script src="@Url.Content("~/Scripts/knockout-3.3.0.js")" type="text/javascript"></script>
-        <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
-
-        <script src="~/Scripts/jquery.nouislider.full.min.js" type="text/javascript"></script>
         <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 
-        <link href="~/Content/jquery.nouislider.css" rel="stylesheet" />
-        <link href="~/Content/jquery.nouislider.pips.css" rel="stylesheet" />
+        @Styles.Render("~/bundles/tools-style")
     }
 
 }
