--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -245,12 +245,11 @@ else
         var msScript = "~/Scripts/musicservice.js" + Page.ScriptQualifier;
     }
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="@Url.Content("~/Scripts/chosen.jquery.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/knockout-3.3.0.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/knockout")
+    @Scripts.Render("~/bundles/tools-script")
     <script src="@Url.Content(msScript)" type="text/javascript"></script>
     <script src="@Url.Content(tagChooserScript)" type="text/javascript"></script>
     <script src="@Url.Content(pageScript)" type="text/javascript"></script>
 
-    <link href="@Url.Content("~/Content/chosen.css")" rel="stylesheet" type="text/css" />
+    @Styles.Render("~/bundles/tools-style")
 }
