Competitive Ballroom Dancing page that links to the differnet catagories

--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -32,7 +32,7 @@
     }
 </div>
 
-<p id="competition" class="large">Or check out our more traditional ballroom categorization of songs by going to our @LinkCategory("International Standard"), @LinkCategory("International Latin"), @LinkCategory("American Smooth") or @LinkCategory("American Rhythm") pages.</p>
+<p id="competition" class="large">Or check out our more traditional ballroom competition categories of songs by going to our @Html.ActionLink("Ballroom competition categories","ballroom-competition-categories","dances") page.</p>
 <p>Choose from the dances styles to get more information or click on the number next to the name to get a list of songs that are suitable to dance that dance to.</p>
 <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
 
