Latin carosel now links to latin page. Ballroom carosel's link to the competitions page is also set up but commented out for the moment, till the competitions page is finished

--- a/DanceCalc/m4d/Views/Home/Index.cshtml
+++ b/DanceCalc/m4d/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
     var dances = new[]
     {
-        new DanceClass{Title="Ballroom",Image="ballroom",
+        new DanceClass{Title="Ballroom",Image="ballroom",TopDance="Ballroom-Competition-Categories",
             Dances=new List<DanceMapping>
             {
                 new DanceMapping("International Standard"),new DanceMapping("International Latin"),new DanceMapping("American Smooth"),new DanceMapping("American Rhythm")
@@ -18,7 +18,7 @@
               {new DanceMapping("Lindy Hop"),new DanceMapping("East Coast Swing"),new DanceMapping("West Coast Swing"),new DanceMapping("Hustle"),
                 new DanceMapping("Jive"),new DanceMapping("Jump Swing"), new DanceMapping("Carolina Shag"), new DanceMapping("Collegiate Shag"),
             }},
-        new DanceClass{Title="Latin",Image="salsa",
+        new DanceClass{Title="Latin",Image="salsa",TopDance="latin",
             Dances=new List<DanceMapping>
             {
                 new DanceMapping("Salsa"),new DanceMapping("Bachata"),new DanceMapping("Cumbia"),new DanceMapping("Merengue"),
