--- a/DanceCalc/m4d/Views/Song/Album.cshtml
+++ b/DanceCalc/m4d/Views/Song/Album.cshtml
@@ -21,9 +21,6 @@
 
 @section Scripts
 {
-    @{
-        string msScript = "~/Scripts/musicservice.js" + Page.ScriptQualifier;
-    }
-    <script src="@Url.Content(msScript)" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/musicservice")
 }
 
