--- a/DanceCalc/m4d/Views/Dance/Details.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Details.cshtml
@@ -157,14 +157,9 @@
     }
 </p>
 
-@{
-    string pageScript = "~/Scripts/showdance.js" + Page.ScriptQualifier;
-    string msScript = "~/Scripts/musicservice.js" + Page.ScriptQualifier;
-}
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="@Url.Content(msScript)" type="text/javascript"></script>
-    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/musicservice")
+    @Scripts.Render("~/bundles/showdance")
 }
 
