--- a/DanceCalc/m4d/Views/Dance/Edit.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Edit.cshtml
@@ -72,7 +72,6 @@
 </div>
 
 @{
-    string pageScript = "~/Scripts/editdance.js" + Page.ScriptQualifier;
     string linksString;
     if (Model.DanceLinks == null)
     {
@@ -94,6 +93,7 @@
     </script>
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/knockout")
-    <script src="@Url.Content("~/Scripts/MarkdownDeepLib.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/knockout-mapping")
+    @Scripts.Render("~/bundles/markdowndeep")
+    @Scripts.Render("~/bundles/editdance")
 }
