--- a/DanceCalc/m4d/Views/Dance/Index.cshtml
+++ b/DanceCalc/m4d/Views/Dance/Index.cshtml
@@ -36,14 +36,9 @@
 <p>Choose from the dances styles to get more information or click on the number next to the name to get a list of songs that are suitable to dance that dance to.</p>
 <p>Don't agree with how we've organized dance styles? Well, we're not convinced there is a "right way" but we're doing some research to see if we can find a better way (or maybe multiple ways).  Please help us out by <a href="https://www.music4dance.net/blog/help-how-would-you-group-this-dance-style/">taking our survey</a> so that we can include your ideas about how to organize dance styles in the future.</p>
 
-@{
-    string pageScript = "~/Scripts/showdance.js" + Page.ScriptQualifier;
-}
-
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+    @Scripts.Render("~/bundles/showdance")
 }
 
 
