--- a/DanceCalc/m4d/Views/Home/Tempi.cshtml
+++ b/DanceCalc/m4d/Views/Home/Tempi.cshtml
@@ -107,7 +107,6 @@
 </div>
 
 @section Scripts {
-
     <script>
         var danceTypes = [
             {id: 'ALL', name: 'All Types'},
@@ -128,21 +127,17 @@
                 <text>{ title: "@item.Title", name: "@item.Name", category:"@item.Category", qualifier:"@item.Qualifier"},</text>
             }
         ];
-    </script>
-    @{        
-        <script>
-            var paramDetailed = @(paramDetailed ? "true" : "false");
-            var paramStyle = @paramStyle;
-            var paramMeter = @paramMeter;
-            var paramType = @paramType;
-            var paramOrg = @paramOrg;
 
-            var dances = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.NonPerformanceDanceTypes));
-        </script>
-        string pageScript = "~/Scripts/Tempi.js" + Page.ScriptQualifier;
-        Scripts.Render("~/bundles/jqueryval");
-    }
-    <script src="@Url.Content("~/Scripts/knockout-3.3.0.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/knockout.mapping-latest.js")" type="text/javascript"></script>
-    <script src="@Url.Content(pageScript)" type="text/javascript"></script>
+        var paramDetailed = @(paramDetailed ? "true" : "false");
+        var paramStyle = @paramStyle;
+        var paramMeter = @paramMeter;
+        var paramType = @paramType;
+        var paramOrg = @paramOrg;
+
+        var dances = @Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model.NonPerformanceDanceTypes));
+    </script>
+    @Scripts.Render("~/bundles/jqueryval");
+    @Scripts.Render("~/bundles/knockout");
+    @Scripts.Render("~/bundles/knockout-mapping");
+    @Scripts.Render("~/bundles/tempi");
 }
