--- a/DanceCalc/m4d/Views/Admin/CleanupTasks.cshtml
+++ b/DanceCalc/m4d/Views/Admin/CleanupTasks.cshtml
@@ -26,9 +26,9 @@
     @*<li>@Html.ActionLink("Add Dance Groups", "AddDanceGroups")</li>
         <li>@Html.ActionLink("Clean Tags", "CleanTags")</li>*@
     <li>@Html.ActionLink("Infer Dance Types", "InferDanceTypes")</li>
-    <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache")</li>
     <li>@Html.ActionLink("Update Spotify Regions", "SpotifyRegions", "Admin", new { count = 500 }, null)</li>
     <li>@Html.ActionLink("Region Stats", "RegionStats", "Admin")</li>
     <li>@Html.ActionLink("Compress Regions", "CompressRegions", "Admin")</li>
     <li>@Html.ActionLink("Cleanup Albums", "CleanAlbums", "Admin")</li>
+    <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache") (@SongCounts.Reloads - autoreloads)</li>
 </ul>
