Change List Users to just Users, Added in a very minimal "Currently Active Users" concept, that just tracks loggin/logout in memory.

--- a/DanceCalc/m4d/Views/Admin/Index.cshtml
+++ b/DanceCalc/m4d/Views/Admin/Index.cshtml
@@ -11,7 +11,7 @@
 <hr/>
 
 <div>
-    <h3>@Html.ActionLink("List Users", "Index", "ApplicationUsers")</h3>
+    <h3>@Html.ActionLink("Users", "Index", "ApplicationUsers")</h3>
 </div>
 <hr/>
 
