--- a/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
+++ b/DanceCalc/m4d/Views/ApplicationUsers/Index.cshtml
@@ -1,17 +1,28 @@
-﻿@using Microsoft.AspNet.Identity
+﻿@using m4d.Controllers
+@using Microsoft.AspNet.Identity
 @model ApplicationUserManager
 
 @{
     ViewBag.Title = "Index";
+    var activeUsers = string.Join(",",AccountController.ActiveUsers);
 }
 
-<h2>Index</h2>
+<h2>User Administrator</h2>
 
 @*
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
 *@
+
+<hr/>
+<h3>Actions</h3>
+
+<p><strong>Active Users:</strong> @activeUsers</p>
+<p>@Html.ActionLink("New Pseudo User", "Create", null, new { @class = "btn btn-default", role = "button" })</p>
+
+<hr />
+<h3>Users</h3>
 <table class="table">
     <tr>
         @*
@@ -86,6 +97,10 @@
         </td>
         <td>
             @Html.ActionLink(item.UserName, "Details", new { id = item.Id })
+            @if (AccountController.IsUserActive(item.UserName))
+            {
+                @: *
+            }
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Email)
@@ -122,4 +137,3 @@
 }
 </table>
 
-@Html.ActionLink("New Pseudo User", "Create", null, new { @class = "btn btn-default", role = "button" })
