--- a/DanceCalc/m4d/Views/Shared/_Layout.cshtml
+++ b/DanceCalc/m4d/Views/Shared/_Layout.cshtml
@@ -120,7 +120,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>@Html.ActionLink("Index", "Index", "Admin")</li>
-                                <li>@Html.ActionLink("List Users", "Index", "ApplicationUsers")</li>  
+                                <li>@Html.ActionLink("Users", "Index", "ApplicationUsers")</li>  
                                 <li>@Html.ActionLink("Tags", "Tags", "Admin")</li>
                                 <li>@Html.ActionLink("Logging", "Logging", "Admin")</li>
                                 <li>@Html.ActionLink("Cleanup Tasks", "CleanupTasks", "Admin")</li>
