This ended up being a bigger rework than I had hoped.
I changed the LoadFromTrack to depend on LoadFromRow, so that I can keep things consistent, which seems to work.

I also ended up adding in an admin function to reload tags based on the songs properties.

--- a/DanceCalc/m4d/Views/Song/Index.cshtml
+++ b/DanceCalc/m4d/Views/Song/Index.cshtml
@@ -171,7 +171,9 @@
             @Html.ActionLink("Spotify Batch", "BatchMusicService", new {filter, type = "S", count = 10}, new {@class = "btn btn-success", role = "button"})
             @Html.ActionLink("Amazon Batch", "BatchMusicService", new {filter, type = "A", count = 10}, new {@class = "btn btn-success", role = "button"})
             @Html.ActionLink("Canonical Batch", "BatchMusicService", new {filter, type = "-", count = 10, options = "M"}, new {@class = "btn btn-success", role = "button"})
-            @Html.ActionLink("Backup List", "BackupTail", "Admin", new { filter, count=-1}, new { @class = "btn btn-default", role = "button" })
+            @Html.ActionLink("Backup List", "BackupTail", "Admin", new {filter, count=-1}, new { @class = "btn btn-default", role = "button" })
+            @Html.ActionLink("Update User Tags", "RebuildUserTags", "Admin", new {filter, update=true}, new { @class = "btn btn-default", role = "button" })
+            @Html.ActionLink("Update Tags", "RebuildTags", "Admin", new {filter}, new { @class = "btn btn-default", role = "button" })
         </div>
     }
 }
