--- a/DanceCalc/m4d/Views/Admin/ScrapingModifier.cshtml
+++ b/DanceCalc/m4d/Views/Admin/ScrapingModifier.cshtml
@@ -26,7 +26,8 @@
     <span>User: </span><input type="text" name="user" value="SpotCharles" /><br />
     <span>Url: </span><input type="text" name="url" value="https://open.spotify.com/user/113231003/playlist/1tUHw7s4bfRVbPdHo6ut7D" />
     <span>Dances: </span><input type="text" name="dances" value="CST" />
-    <span>Tags: </span><input type="text" name="tags" />
+    <span>Song Tags: </span><input type="text" name="songTags"/>
+    <span>Dance Tags: </span><input type="text" name="danceTags" />
     <input type="submit" value="Scrape" />
 }
 
