--- a/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
+++ b/DanceCalc/m4d/Views/Admin/UploadBackup.cshtml
@@ -66,17 +66,17 @@
         @Html.AntiForgeryToken();
         <input type="file" name="FileUpload" />
         <br />
-        <input type="checkbox" name="batch" id="batch" value="true" /> <text>Batch Upload</text>
         <input type="submit" name="reloadDatabase" id="Reload" value="Reload" />
-        @*<input type="submit" name="reloadDatabase" id="Add" value="Add" />*@
-        <input type="submit" name="reloadDatabase" id="UpdateSongs" value="Songs" />
-        <input type="submit" name="reloadDatabase" id="UpdateDances" value="Dances" />
-        <input type="submit" name="reloadDatabase" id="UpdateSongs" value="Users" />
+        <input type="submit" name="reloadDatabase" id="Update" value="Update" />
     }
 
     <hr />
     <h2>Backups</h2>
-    <h2>Uploads</h2>
+    <li>@Html.ActionLink("Backup the Database", "BackupDatabase"), @Html.ActionLink("Users", "BackupDatabase", new { tags = false, dances = false, songs = false }), @Html.ActionLink("Dances", "BackupDatabase", new { tags = false, users = false, songs = false }), @Html.ActionLink("Tags", "BackupDatabase", new { tags = true, dances = false, users = false, songs = false })</li>
+    <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new { useLookupHistory = "true" })</li>
+    <li>@Html.ActionLink("Backup tail", "BackupTail", new { count = 150 })</li>
+    <li>@Html.ActionLink("Backup tail (500)", "BackupTail", new { count = 500 })</li>
+    <li>@Html.ActionLink("Backup tail (today)", "BackupTail", new {from = DateTime.Now.ToShortDateString(), count = 5000})</li>
 
     <h3>Backup Delta</h3>
     using (Html.BeginForm("BackupDelta", "Admin", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -86,10 +86,4 @@
         <br />
         <input type="submit" name="UploadTempi" value="Upload" />
     }
-
-    <li>@Html.ActionLink("Backup the Database", "BackupDatabase"), @Html.ActionLink("Users", "BackupDatabase", new { tags = false, dances = false, songs = false }), @Html.ActionLink("Dances", "BackupDatabase", new { tags = false, users = false, songs = false }), @Html.ActionLink("Tags", "BackupDatabase", new { tags = true, dances = false, users = false, songs = false })</li>
-    <li>@Html.ActionLink("Backup the Database (with lookup history)", "BackupDatabase", new { useLookupHistory = "true" })</li>
-    <li>@Html.ActionLink("Backup tail", "BackupTail", new { count = 150 })</li>
-    <li>@Html.ActionLink("Backup tail (500)", "BackupTail", new { count = 500 })</li>
-    <li>@Html.ActionLink("Backup tail (today)", "BackupTail", new { from = DateTime.Now.ToShortDateString(), count = 5000 })</li>
 }
