--- a/DanceCalc/m4d/Views/Home/Counter.cshtml
+++ b/DanceCalc/m4d/Views/Home/Counter.cshtml
@@ -13,7 +13,10 @@
             <label for="idString">ID/URL</label>
             <input type="text" class="form-control" id="idString">
         </div>
-        <button type="submit" class="btn btn-default">Lookup</button>
+        <button type="submit" id="spotify" value="S" class="btn btn-default service-lookup">Spotify</button>
+        <button type="submit" id="itunes" value ="I" class="btn btn-default service-lookup">ITunes</button>
+        <button type="submit" id="amazon" value="A" class="btn btn-default service-lookup">Amazon</button>
+        <button type="submit" id="xbox" value="X" class="btn btn-default service-lookup">Groove</button>
     </form>
 
     <div data-bind="with: song"><a class="label label-music" data-bind="attr: {href: '/song/edit?id=' + SongId + '&tempo=' + $root.tempo()}">Edit</a> <em data-bind="text:Title"></em> by <strong data-bind="text:Artist"></strong></div>
